--- a/resources/views/robots-txt.phtml
+++ b/resources/views/robots-txt.phtml
@@ -33,12 +33,13 @@ Disallow: <?= $base_path ?>/login
 
 Disallow: <?= $base_path ?>/family.php
 Disallow: <?= $base_path ?>/individual.php
+Disallow: <?= $base_path ?>/mediaviewer.php
 Disallow: <?= $base_path ?>/source.php
 
-Disallow: <?= $base_path ?>/tree/*/contact
 Disallow: <?= $base_path ?>/tree/*/relationships-
 Disallow: <?= $base_path ?>/tree/*/place-list/
 Disallow: <?= $base_path ?>/tree/*/anniversary-ics/
+Disallow: <?= $base_path ?>/tree/*?ajax=1
 
 <?php if ($sitemap_url !== '') : ?>
 Sitemap: <?= $sitemap_url ?>
