--- a/resources/views/layouts/default.phtml
+++ b/resources/views/layouts/default.phtml
@@ -44,6 +44,8 @@ use Psr\Http\Message\ServerRequestInterface;
             <?php endif ?>
         </title>
 
+        <link rel="canonical" href="<?= e($record->url()) ?>">
+        
         <!--iOS-->
         <link rel="apple-touch-icon" sizes="180x180" href="<?= e(route(AppleTouchIconPng::class)) ?>">
         <!--Generic favicons-->
