defalut.phtml cannonical links for records

--- a/resources/views/layouts/default.phtml
+++ b/resources/views/layouts/default.phtml
@@ -45,8 +45,9 @@ use Psr\Http\Message\ServerRequestInterface;
         </title>
 
         <!--cannonical link(self) for records-->
-        <?php if (isset($record)) 
-            echo '<link rel="canonical" href="' . $record->url() . '">'; ?>
+        <?php if (isset($record)): ?>
+            <link rel="canonical" href=" <?=e($record->url())?> "> 
+        <?php endif ?>    
         <!--iOS-->
         <link rel="apple-touch-icon" sizes="180x180" href="<?= e(route(AppleTouchIconPng::class)) ?>">
         <!--Generic favicons-->
