robots.txt Optimierung

--- a/resources/views/robots-txt.phtml
+++ b/resources/views/robots-txt.phtml
@@ -34,10 +34,13 @@ Disallow: <?= $base_path ?>/login
 Disallow: <?= $base_path ?>/family.php
 Disallow: <?= $base_path ?>/indilist.php
 Disallow: <?= $base_path ?>/individual.php
+Disallow: <?= $base_path ?>/note.php
+Disallow: <?= $base_path ?>/source.php
+
 Disallow: <?= $base_path ?>/index.php?route=
+Disallow: <?= $base_path ?>/mediafirewall.php
 Disallow: <?= $base_path ?>/mediaviewer.php
 Disallow: <?= $base_path ?>/module.php
-Disallow: <?= $base_path ?>/source.php
 
 Disallow: <?= $base_path ?>/tree/*?ajax=1
 Disallow: <?= $base_path ?>/tree/*/ancestors-tree-
@@ -60,6 +63,7 @@ Disallow: <?= $base_path ?>/tree/*/place-list/
 Disallow: <?= $base_path ?>/tree/*/relationships-
 
 Disallow: <?= $base_path ?>/module/tree/Chart/
+Disallow: <?= $base_path ?>/themes/
 
 <?php if ($sitemap_url !== '') : ?>
 Sitemap: <?= $sitemap_url ?>
