robots-txt korrektur place-list

--- a/resources/views/robots-txt.phtml
+++ b/resources/views/robots-txt.phtml
@@ -59,7 +59,7 @@ Disallow: <?= $base_path ?>/tree/*/media-list?
 Disallow: <?= $base_path ?>/tree/*/media-thumbnail?
 Disallow: <?= $base_path ?>/tree/*/pedigree-map-
 Disallow: <?= $base_path ?>/tree/*/pedigree-right-
-Disallow: <?= $base_path ?>/tree/*/place-list/
+Disallow: <?= $base_path ?>/tree/*/place-list
 Disallow: <?= $base_path ?>/tree/*/relationships-
 
 Disallow: <?= $base_path ?>/module/tree/Chart/
