--- a/resources/views/modules/relationships-chart/page.phtml
+++ b/resources/views/modules/relationships-chart/page.phtml
@@ -67,7 +67,7 @@ use Fisharebest\Webtrees\View;
                 <?= I18N::translate('Find the closest relationships') ?>
                 <input type="hidden" name="recursion" value="0">
             <?php else : ?>
-                <?= view('components/radios', ['name' => 'recursion', 'options' => $recursion_options, 'selected' => $recursion]) ?>
+                <?= view('components/radios', ['name' => 'recursion', 'options' => $recursion_options, 'selected' => 0]) ?>
             <?php endif ?>
         </div>
     </fieldset>
