robots.txt exclude noindex url

--- a/resources/views/robots-txt.phtml
+++ b/resources/views/robots-txt.phtml
@@ -38,6 +38,10 @@ Disallow: <?= $base_path ?>/module.php
 # Noindex Pages blocked
 Disallow: <?= $base_path ?>/tree/*?ajax=1
 Disallow: <?= $base_path ?>/tree/*/contact?
+Disallow: <?= $base_path ?>/tree/*/calendar/   
+Disallow: <?= $base_path ?>/tree/*/descendants-tree-
+Disallow: <?= $base_path ?>/tree/*/fan-chart-
+Disallow: <?= $base_path ?>/tree/*/hourglass-
 
 Disallow: <?= $base_path ?>/tree/*/media-download
 Disallow: <?= $base_path ?>/tree/*/media-list?
