--- a/resources/views/robots-txt.phtml
+++ b/resources/views/robots-txt.phtml
@@ -35,13 +35,33 @@ Disallow: <?= $base_path ?>/mediafirewall.php
 Disallow: <?= $base_path ?>/mediaviewer.php
 Disallow: <?= $base_path ?>/module.php
 
+Disallow: <?= $base_path ?>/public/*.png
+
+#2.0 links 
+Disallow: <?= $base_path ?>/family.php
+Disallow: <?= $base_path ?>/individual.php
+Disallow: <?= $base_path ?>/source.php
+
 # Noindex Pages blocked
 Disallow: <?= $base_path ?>/tree/*?ajax=1
-Disallow: <?= $base_path ?>/tree/*/contact?
+Disallow: <?= $base_path ?>/tree/*/ancestors-tree-
 Disallow: <?= $base_path ?>/tree/*/calendar/   
+Disallow: <?= $base_path ?>/tree/*/compact/
+Disallow: <?= $base_path ?>/tree/*/contact?
 Disallow: <?= $base_path ?>/tree/*/descendants-tree-
+Disallow: <?= $base_path ?>/tree/*/family-book-
 Disallow: <?= $base_path ?>/tree/*/fan-chart-
 Disallow: <?= $base_path ?>/tree/*/hourglass-
+Disallow: <?= $base_path ?>/tree/*/pedigree-
+Disallow: <?= $base_path ?>/tree/*/relationships-
+Disallow: <?= $base_path ?>/tree/*/branches/
+Disallow: <?= $base_path ?>/tree/*/anniversary-ics/
+
+Disallow: <?= $base_path ?>/tree/*/family-list
+Disallow: <?= $base_path ?>/tree/*/individual-list
+Disallow: <?= $base_path ?>/tree/*/place-list/
+
+Disallow: <?= $base_path ?>/module/tree/Chart/
 
 Disallow: <?= $base_path ?>/tree/*/media-download
 Disallow: <?= $base_path ?>/tree/*/media-list?
