Übernahme Format anpassungen

--- a/resources/views/modules/gedcom_stats/statistics.phtml
+++ b/resources/views/modules/gedcom_stats/statistics.phtml
@@ -34,7 +34,7 @@ use Fisharebest\Webtrees\I18N;
 <?php endif ?>
 
 <div class="row">
-    <div class="col col">
+    <div class="col col-sm-auto">
         <table class="table wt-facts-table">
             <caption class="visually-hidden">
                 <?= I18N::translate('Statistics') ?>
