--- a/resources/views/robots-txt.phtml
+++ b/resources/views/robots-txt.phtml
@@ -44,6 +44,7 @@ Disallow: <?= $base_path ?>/individual.php
 Disallow: <?= $base_path ?>/source.php
 
 # Noindex Pages blocked
+Disallow: <?= $base_path ?>/tree/*/anniversary-ics
 Disallow: <?= $base_path ?>/tree/*/contact
 Disallow: <?= $base_path ?>/tree/*/hourglass-
 Disallow: <?= $base_path ?>/tree/*/pedigree-
